--- a/ql/ql/doctype/ql_settings/ql_settings.json
+++ b/ql/ql/doctype/ql_settings/ql_settings.json
@@ -5,6 +5,7 @@
  "engine": "InnoDB",
  "field_order": [
   "dept_abbr",
+  "month_code",
   "qi_warehouse",
   "qi_reject_warehouse",
   "qi_inspected_by_default",
@@ -38,10 +39,15 @@
    "fieldname": "carton_sizes",
    "fieldtype": "Small Text",
    "label": "Carton Sizes"
+  },
+  {
+   "fieldname": "month_code",
+   "fieldtype": "Data",
+   "label": "Month Code"
   }
  ],
  "issingle": 1,
- "modified": "2021-03-10 09:44:21.347357",
+ "modified": "2021-03-26 12:52:45.927397",
  "modified_by": "Administrator",
  "module": "QL",
  "name": "QL Settings",
