--- a/ql/ql/doctype/ql_settings/ql_settings.json
+++ b/ql/ql/doctype/ql_settings/ql_settings.json
@@ -12,7 +12,8 @@
   "qi_inspected_by_default",
   "carton_sizes",
   "wip_reserve_warehouse",
-  "mkt_email_api"
+  "mkt_email_api",
+  "user_allow_negative_stock"
  ],
  "fields": [
   {
@@ -63,10 +64,16 @@
    "fieldname": "mkt_email_api",
    "fieldtype": "Small Text",
    "label": "Marketing Email API URL"
+  },
+  {
+   "fieldname": "user_allow_negative_stock",
+   "fieldtype": "Link",
+   "label": "User Allow Negative Stock",
+   "options": "User"
   }
  ],
  "issingle": 1,
- "modified": "2021-12-28 14:33:15.563531",
+ "modified": "2023-02-25 10:12:46.781274",
  "modified_by": "Administrator",
  "module": "QL",
  "name": "QL Settings",
